fix loading of task from localstorage

--- a/task.html
+++ b/task.html
@@ -40,7 +40,7 @@
     <hr />
     <br />
 
-    <div class="tasks">
+    <div class="tasks" id="display">
       <center><h2 style="display: block">Pinned Tasks</h2></center>
       <br />
 
