add filtering of tasks

--- a/task.html
+++ b/task.html
@@ -50,7 +50,10 @@
       <hr />
       <br />
 
-      <center><h1 style="display: block">Tasks</h1></center>
+      <div id="task-list-header">
+        <center><h1 style="display: block">Tasks</h1></center>
+        <button id="filter"><span><i class="fa-solid fa-sliders"></i></span></button>
+      </div>
       <br />
 
       <div id="message" class="hide"></div>
