add folders styling

--- a/task.html
+++ b/task.html
@@ -59,8 +59,18 @@
 
       <div id="message" class="hide"></div>
       <div id="task-list"></div>
-    </div>
 
+      <center><h1 style="display: block">Folders</h1></center>
+
+      <div id="folders-list">
+        <div class="folder_info">
+          <img width="100" height="100" id="folder-icon" src="https://img.icons8.com/clouds/100/folder-invoices.png" alt="folder-invoices"/>  
+          <p class="folder-name">folder</p>
+        </div>
+      </div>
+
+    </div>
+    
     <script src="script.js"></script>
   </body>
 </html>
