add icon button to insert task in folder

--- a/task.html
+++ b/task.html
@@ -52,6 +52,7 @@
 
       <div id="task-list-header">
         <center><h1 style="display: block">Tasks</h1></center>
+        <button id="folder" title="Add folder"><span><i class="fa-solid fa-folder-plus"></i></span></button>
         <button id="filter" title="Apply filters"><span><i class="fa-solid fa-sliders"></i></span></button>
         <button id="refresh" title="Remove filters"><span><i class="fa-solid fa-arrows-rotate"></i></span></button>
       </div>
@@ -62,15 +63,11 @@
 
       <center><h1 style="display: block">Folders</h1></center>
 
-      <div id="folders-list">
-        <div class="folder_info">
-          <img width="100" height="100" id="folder-icon" src="https://img.icons8.com/clouds/100/folder-invoices.png" alt="folder-invoices"/>  
-          <p class="folder-name">folder</p>
-        </div>
-      </div>
+      <div id="folders-list"></div>
 
     </div>
     
     <script src="script.js"></script>
+    
   </body>
 </html>
