add functions to implement folders' functionality

--- a/task.html
+++ b/task.html
@@ -37,7 +37,7 @@
     </div>
     <br />
 
-    <div class="tasks" id="display">
+    <div id="tasks-section">
       <br />
 
       <center><h1 id="pinned-text">Pinned Tasks</h1></center>
@@ -61,10 +61,13 @@
       <div id="message" class="hide"></div>
       <div id="task-list"></div>
 
+      
+    </div>
+
+    <div id="folders-section">
       <center><h1 style="display: block">Folders</h1></center>
 
       <div id="folders-list"></div>
-
     </div>
     
     <script src="script.js"></script>
