--- a/task.html
+++ b/task.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task Management Webpage</title>
+    <title>Tasks Management</title>
     <link rel="stylesheet" href="style.css" />
 
     <!-- get font-awesome cdn -->
